--- a/sass/common.sass
+++ b/sass/common.sass
@@ -1,5 +1,18 @@
-$color: #eaeaea
 $background-color: #1A1A1A
+$font: 'Super Mario 256', sans-serif
+
+//https://www.schemecolor.com/amazing-5-color-scheme.php
+$color1: #7958AC
+$color2: #F789AE
+$color3: #F5E9BB
+$color4: #49E3DA
+$color5: #2EC2AD
+
+@mixin shadow($color, $count, $mult)
+  $all: ()
+  @for $i from 1 through $count
+    $all: append($all, append(0 $i * 0.125vmin 0, darken($color, $i * $mult * 1%)), comma)
+  text-shadow: $all
 
 \:root
   --size: min(1vw, 1vh)
@@ -7,20 +20,29 @@ $background-color: #1A1A1A
 html, body
   margin: 0
   padding: 0
-  width: 100%
-  height: 100%
   overflow: hidden
   position: relative
-  font-family: 'Open Sans', sans-serif
+  font-family: $font
+  font-size: 1vmin
   -webkit-overflow-scrolling: touch
   touch-action: manipulation
-  color: $color
+  color: white
   background-color: $background-color
+
+html
+  width: -webkit-fill-available
+  height: -webkit-fill-available
 
 body
   display: flex
   align-items: center
   justify-content: center
+  min-width: 100vw
+  min-height: 100vh
+  /* mobile viewport bug fix */
+  min-width: -webkit-fill-available
+  min-height: -webkit-fill-available
+  background-color: $color2
 
 *
   user-select: none
