--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,17 +1,20 @@
 @import common
+@import player
 
-// test grid. can be removed
+@font-face
+  font-family: 'Super Mario 256'
+  src: url('../fonts/sm.ttf')
 
 main
-  --border: calc(var(--size) * 10)
   width: 100%
   height: 100%
   display: grid
-  grid-template: var(--border) 1fr var(--border) / var(--border) 1fr var(--border)
+  grid-template: 10vmin 1fr 10vmin / 10vmin 1fr 10vmin
 
-  div
-    display: flex
-    align-items: center
-    justify-content: center
-    overflow: hidden
-    font-size: calc(var(--size) * 5)
+  .play-field
+    padding: 1vmin
+    grid-area: 2 / 2
+    border-radius: calc(var(--size) * 3)
+    background-color: $color1
+    white-space: pre-line
+    box-shadow: 0 0 1vmin 0 rgba(black, 0.3) inset, 0 0 1vmin 0 rgba(white, 0.6)
