--- a/sass/animations.sass
+++ b/sass/animations.sass
@@ -1,3 +1,10 @@
+@keyframes bubbles
+  0%
+    background-position: 200% 0
+
+  100%
+    background-position: 0 100%
+
 @keyframes wobbling
   0%
     transform: rotate(-1deg)
