--- a/sass/main.sass
+++ b/sass/main.sass
@@ -39,3 +39,4 @@ main
       background-color: $color1
       white-space: pre-line
       box-shadow: 0 0 1vmin 0 rgba(black, 0.3) inset, 0 0 1vmin 0 rgba(white, 0.6)
+      pointer-events: none
