--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,26 +1,33 @@
 @import common
+@import colors
 @import player
+@import svg-card
 
 @font-face
   font-family: 'Super Mario 256'
   src: url('../fonts/sm.ttf')
 
+\:root
+  --card-size: 0vmin
+  --card-gap: 1vmin
+
 main
+  margin: 0
+  padding: 0
   width: 100%
   height: 100%
   position: relative
   background-color: $color2
 
-  > .bubbles
+  .bubbles
     top: 0
     left: 0
     right: 0
     bottom: 0
     position: absolute
-    background: url("../background-pattern.jpeg"), $background-color
-    background-size: 60vmin
+    background: url("../background-pattern.jpeg")
     mix-blend-mode: screen
-  //animation: bubbles infinite 240s linear
+    //animation: bubbles infinite 240s linear
 
   > .game
     top: 0
@@ -33,10 +40,26 @@ main
 
 
     > .play-field
-      padding: 1vmin
       grid-area: 2 / 2
-      border-radius: calc(var(--size) * 3)
-      background-color: $color1
-      white-space: pre-line
-      box-shadow: 0 0 1vmin 0 rgba(black, 0.3) inset, 0 0 1vmin 0 rgba(white, 0.6)
+      border-radius: 3vmin
+      background-color: darken($color1, 4)
+      box-shadow: 0 0 3vmin 0 rgba(black, 0.4) inset, 0 0 1vmin 0 rgba(black, 0.3) inset, 0 0 1.5vmin 0 rgba(white, 0.7)
       pointer-events: none
+      position: relative
+      overflow: hidden
+      display: flex
+      align-items: center
+      justify-content: center
+
+      > div.cards
+        margin: auto
+        display: flex
+        flex-direction: column
+        perspective: 800px
+        gap: var(--card-gap)
+
+        > div.row
+          display: flex
+          flex-direction: row
+          gap: var(--card-gap)
+          transform-style: preserve-3d
