--- a/sass/player.sass
+++ b/sass/player.sass
@@ -1,4 +1,5 @@
 @import common
+@import colors
 @import animations
 
 main div.player-wrapper
@@ -44,7 +45,7 @@ main div.player-wrapper
       outline: none
       appearance: none
       padding: 1.5vmin 3vmin
-      border-radius: calc(var(--size) * 4)
+      border-radius: 4vmin
       color: lighten($color3, 20)
       background: linear-gradient(to bottom, darken($color2, 1), darken($color2, 20))
       box-shadow: 0 1px 1px 0 rgba(white, 0.4) inset, 0 -1px 1px 0 rgba(black, 0.2) inset, 0 0.75vmin 0.5vmin 0 rgba(black, 0.2)
