--- a/sass/animations.sass
+++ b/sass/animations.sass
@@ -14,3 +14,65 @@
 
   100%
     transform: rotate(1deg)
+
+@keyframes appear
+  0%
+    filter: brightness(0.5) blur(2px)
+    transform: translate3d(0, 0, 666px) rotateX(180deg) scale(1)
+
+  88%
+    filter: brightness(1.0) blur(0)
+    transform: translate3d(0, 0, 0) rotateX(0deg) scale(1)
+
+  97%
+    filter: brightness(2.0) blur(0)
+    transform: translate3d(0, 0, 0) rotateX(0deg) scale(1.1)
+
+  100%
+    filter: brightness(1.0) blur(0)
+    transform: translate3d(0, 0, 0) rotateX(0deg) scale(1)
+
+@keyframes selected
+  0%
+    transform: rotate(-1deg)
+
+  50%
+    transform: rotate(0deg) scale(1.08)
+
+  100%
+    transform: rotate(1deg)
+
+@keyframes invalid-selection
+  0%
+    transform: translate(1px, 1px) rotate(0deg)
+  10%
+    transform: translate(-1px, -2px) rotate(-1deg)
+  20%
+    transform: translate(-3px, 0px) rotate(1deg)
+  30%
+    transform: translate(3px, 2px) rotate(0deg)
+  40%
+    transform: translate(1px, -1px) rotate(1deg)
+  50%
+    transform: translate(-1px, 2px) rotate(-1deg)
+  60%
+    transform: translate(-3px, 1px) rotate(0deg)
+  70%
+    transform: translate(3px, 1px) rotate(-1deg)
+  80%
+    transform: translate(-1px, -1px) rotate(1deg)
+  90%
+    transform: translate(1px, 2px) rotate(0deg)
+  100%
+    transform: translate(1px, -2px) rotate(-1deg)
+
+@keyframes disappear
+  0%
+    opacity: 1.0
+    filter: brightness(1.0) blur(0)
+    transform: translate3d(0, 0, 0) rotateX(0deg)
+
+  100%
+    opacity: 0.0
+    filter: brightness(2.0) blur(4px)
+    transform: translate3d(0, 0, 666px) rotateX(180deg)
