--- a/sass/player.sass
+++ b/sass/player.sass
@@ -51,6 +51,7 @@ main div.player-wrapper
       box-shadow: 0 1px 1px 0 rgba(white, 0.4) inset, 0 -1px 1px 0 rgba(black, 0.2) inset, 0 0.75vmin 0.5vmin 0 rgba(black, 0.2)
       font-family: inherit
       font-size: 3vmin
+      pointer-events: all
       @include shadow(darken($color2, 10), 7, 4)
 
     > div.display
