--- a/sass/svg-card.sass
+++ b/sass/svg-card.sass
@@ -6,6 +6,7 @@ svg.card
   border: 0.2vmin rgba(black, 0.6) solid
   visibility: hidden
   height: var(--card-size)
+  pointer-events: bounding-box
 
   &.appearing
     visibility: visible
@@ -21,7 +22,7 @@ svg.card
     animation: selected 0.3s infinite alternate ease-in-out
 
   &.invalid
-    animation: invalid 0.3s both ease-in-out
+    animation: invalid-selection 0.3s both ease-in-out
     box-shadow: 0 0 8px 0 rgba(red, 0.2) inset, 0 0 1px 0 rgba(red, 0.2)
 
   &.solved
