--- a/sass/animations.sass
+++ b/sass/animations.sass
@@ -5,6 +5,13 @@
   100%
     background-position: 0 100%
 
+@keyframes countdown-flash
+  0%
+    filter: brightness(200%) blur(16px)
+
+  100%
+    filter: brightness(100%)
+
 @keyframes wobbling
   0%
     transform: rotate(-1deg)
