--- a/sass/main.sass
+++ b/sass/main.sass
@@ -32,7 +32,7 @@ main
     background: url("../background-pattern.jpeg")
     mix-blend-mode: screen
     pointer-events: none
-    //animation: bubbles infinite 240s linear
+  //animation: bubbles infinite 240s linear
 
   > .game
     top: 0
@@ -55,6 +55,30 @@ main
       display: flex
       align-items: center
       justify-content: center
+
+      > button.action-button
+        width: 20vmin
+        height: 20vmin
+        border-radius: 10vmin
+        border: none
+        outline: none
+        appearance: none
+        font-family: inherit
+        font-size: 4vmin
+        position: absolute
+        display: flex
+        align-items: center
+        justify-content: center
+        pointer-events: all
+        color: rgba(lighten($color3, 20), 0.7)
+        letter-spacing: 0.1em
+        background-color: rgba($color2, 0.8)
+        box-shadow: 0 0 2vmin 0.5vmin rgba(white, 0.6) inset, 0 0 3vmin 0 rgba(white, 0.8)
+        cursor: pointer
+        @include shadow(lighten($color2, 10), 5, 5)
+
+        &:empty
+          display: none
 
       > div.cards
         margin: auto
