decreases points and shows hint after timeout

--- a/sass/animations.sass
+++ b/sass/animations.sass
@@ -12,6 +12,13 @@
   100%
     filter: brightness(100%)
 
+@keyframes point-decay-flash
+  0%
+    filter: brightness(200%) blur(4px)
+
+  100%
+    filter: brightness(100%)
+
 @keyframes wobbling
   0%
     transform: rotate(-1deg)
