--- a/sass/svg-card.sass
+++ b/sass/svg-card.sass
@@ -16,7 +16,7 @@ svg.card
     visibility: visible
 
   &.hint
-    box-shadow: 0 0 8px 0 rgba(green, 0.4) inset
+    outline: 0.4vmin $color4 solid
 
   &.selected
     animation: selected 0.3s infinite alternate ease-in-out
