--- a/sass/player.sass
+++ b/sass/player.sass
@@ -110,6 +110,9 @@ main div.player-wrapper
       color: white
       text-shadow: 0 -2px 1px black, 0 2px 1px black, 2px 0 1px black, -2px 0 1px black
 
+      > span.flash
+        animation: point-decay-flash 0.3s ease-out
+
     > div.crown
       pointer-events: none
       top: -10vmin
