--- a/sass/animations.sass
+++ b/sass/animations.sass
@@ -14,7 +14,7 @@
 
 @keyframes point-decay-flash
   0%
-    filter: brightness(200%) blur(4px)
+    filter: brightness(200%)
 
   100%
     filter: brightness(100%)
