--- a/bin/main.css
+++ b/bin/main.css
@@ -35,6 +35,7 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   -webkit-tap-highlight-color: transparent;
+  -webkit-overflow-scrolling: touch;
   touch-action: manipulation;
 }
 
@@ -103,6 +104,7 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   -webkit-tap-highlight-color: transparent;
+  -webkit-overflow-scrolling: touch;
   touch-action: manipulation;
 }
 
@@ -432,6 +434,7 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   -webkit-tap-highlight-color: transparent;
+  -webkit-overflow-scrolling: touch;
   touch-action: manipulation;
 }
 
