--- a/sass/common.sass
+++ b/sass/common.sass
@@ -47,6 +47,7 @@ body
   -moz-user-select: none
   -ms-user-select: none
   -webkit-tap-highlight-color: transparent
+  -webkit-overflow-scrolling: touch
   touch-action: manipulation
 
 .hidden
