--- a/bin/main.css
+++ b/bin/main.css
@@ -39,6 +39,16 @@ body {
   touch-action: manipulation;
 }
 
+span.version {
+  top: 0.5vmin;
+  left: 0.5vmin;
+  opacity: 0.4;
+  font-size: 1vmin;
+  font-family: Verdana, sans-serif;
+  color: white;
+  position: absolute;
+}
+
 .hidden {
   display: none !important;
 }
@@ -106,6 +116,16 @@ body {
   -webkit-tap-highlight-color: transparent;
   -webkit-overflow-scrolling: touch;
   touch-action: manipulation;
+}
+
+span.version {
+  top: 0.5vmin;
+  left: 0.5vmin;
+  opacity: 0.4;
+  font-size: 1vmin;
+  font-family: Verdana, sans-serif;
+  color: white;
+  position: absolute;
 }
 
 .hidden {
@@ -436,6 +456,16 @@ body {
   -webkit-tap-highlight-color: transparent;
   -webkit-overflow-scrolling: touch;
   touch-action: manipulation;
+}
+
+span.version {
+  top: 0.5vmin;
+  left: 0.5vmin;
+  opacity: 0.4;
+  font-size: 1vmin;
+  font-family: Verdana, sans-serif;
+  color: white;
+  position: absolute;
 }
 
 .hidden {
