--- a/sass/common.sass
+++ b/sass/common.sass
@@ -50,6 +50,15 @@ body
   -webkit-overflow-scrolling: touch
   touch-action: manipulation
 
+span.version
+  top: 0.5vmin
+  left: 0.5vmin
+  opacity: 0.4
+  font-size: 1vmin
+  font-family: Verdana, sans-serif
+  color: white
+  position: absolute
+
 .hidden
   display: none !important
 
