--- a/sass/animations.sass
+++ b/sass/animations.sass
@@ -1,3 +1,5 @@
+@import colors
+
 @keyframes bubbles
   0%
     background-position: 200% 0
@@ -7,10 +9,10 @@
 
 @keyframes countdown-flash
   0%
-    filter: brightness(200%) blur(16px)
+    background: linear-gradient(to top, rgba(lighten($color2, 50), 0.9), lighten($color2, 35))
 
   100%
-    filter: brightness(100%)
+    background: linear-gradient(to bottom, rgba(lighten($color2, 30), 0.9), lighten($color2, 5))
 
 @keyframes point-decay-flash
   0%
