--- a/bin/main.css
+++ b/bin/main.css
@@ -166,10 +166,10 @@ svg.preloader > circle.progress {
 }
 @keyframes countdown-flash {
   0% {
-    filter: brightness(200%) blur(16px);
+    background: linear-gradient(to top, rgba(255, 255, 255, 0.9), white);
   }
   100% {
-    filter: brightness(100%);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.9), #f9a1be);
   }
 }
 @keyframes point-decay-flash {
@@ -355,14 +355,15 @@ main div.player-wrapper div.player > div.display.countdown div {
   box-shadow: 0 0 1vmin 0 rgba(255, 255, 255, 0.4) inset, 0 0.1vmin 0.2vmin 0 rgba(255, 255, 255, 0.6) inset;
 }
 main div.player-wrapper div.player > div.display.countdown div span {
-  width: 50%;
+  width: 0;
   height: 100%;
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0.9), #f9a1be);
   box-shadow: 0.2vmin 0 0.4vmin 0 rgba(0, 0, 0, 0.1);
   position: absolute;
+  transform: translate(0, 0);
 }
 main div.player-wrapper div.player > div.display.countdown div span.flash {
-  animation: countdown-flash 200ms ease-out;
+  animation: countdown-flash 0.8s linear;
 }
 main div.player-wrapper div.player > div.points {
   pointer-events: none;
