--- a/sass/player.sass
+++ b/sass/player.sass
@@ -91,14 +91,15 @@ main div.player-wrapper
         box-shadow: 0 0 1vmin 0 rgba(white, 0.4) inset, 0 0.1vmin 0.2vmin 0 rgba(white, 0.6) inset
 
         span
-          width: 50%
+          width: 0
           height: 100%
           background: linear-gradient(to bottom, rgba(lighten($color2, 30), 0.9), lighten($color2, 5))
           box-shadow: 0.2vmin 0 0.4vmin 0 rgba(black, 0.1)
           position: absolute
+          transform: translate(0,0)
 
           &.flash
-            animation: countdown-flash 200ms ease-out
+            animation: countdown-flash 0.8s linear
 
     > div.points
       pointer-events: none
