--- a/sass/animations.sass
+++ b/sass/animations.sass
@@ -7,17 +7,17 @@
 
 @keyframes countdown-flash
   0%
-    filter: brightness(150%)
+    filter: brightness(150%) blur(8px)
 
   100%
-    filter: brightness(100%)
+    filter: brightness(100%) blur(0)
 
 @keyframes point-decay-flash
   0%
-    filter: brightness(200%)
+    filter: brightness(150%) blur(2px)
 
   100%
-    filter: brightness(100%)
+    filter: brightness(100%) blur(0)
 
 @keyframes wobbling
   0%
