--- a/sass/main.sass
+++ b/sass/main.sass
@@ -7,6 +7,9 @@
   font-family: 'Super Mario 256'
   src: url('../fonts/sm.ttf')
 
+*
+  pointer-events: none
+
 @mixin button-menu($color)
   border: none
   outline: none
